# graphicle

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: environment.yml  requirements.txt
docs/source/: api.rst  conf.py  index.rst
graphicle/: __init__.py  _base.py  _matrix.pyx  base.py  calculate.py  data.py  duplicates.py  matrices.py  matrix.py  select.py  switch.py  transform.py
graphicle/data/: __init__.py  _base.py  converters.py  data.py  event.py  particle.py
phenograph/: matrices.py
tests/: test_calculate.py  test_data.py  test_transform.py
