[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "graphicle/_version.py"

[project]
name = "graphicle"
dynamic = ["version"]
authors = [{name = "Jacan Chaplais"}]
maintainers = [{name = "Jacan Chaplais"}]
description = "Encode particle physics data onto graph structures."
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "attrs",
    "numpy >=1.21",
    "scipy >=1.8.0",
    "numba",
    "mcpid",
    "typicle >=0.1.4",
    "networkx",
    "fastjet >=3.4.1.2",
    "awkward",
    "rich",
    "deprecation",
    "typing-extensions >=4.7.1",
    "more-itertools",
    "tabulate",
]

[project.urls]
repository = "https://github.com/jacanchaplais/graphicle"
documentation = "https://graphicle.readthedocs.io"

[tool.black]
line-length = 79

[tool.mypy]
mypy_path = "graphicle"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pyright]
include = ["graphicle"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.8"
pythonPlatform = "Linux"
